--- a/.github/workflows/screenshot-and-visitor.yml
+++ b/.github/workflows/screenshot-and-visitor.yml
@@ -1,26 +1,6 @@
 name: Screenshot & Visitor Badge Update
 
 on:
-  workflow_call:
-    inputs:
-      branch:
-        description: "Branch to update"
-        default: "main"
-        required: false
-        type: string
-      readme_template:
-        description: "Path to README template"
-        default: "README_template.md"
-        required: false
-        type: string
-      screenshot_url:
-        description: "Optional URL for screenshot"
-        required: false
-        type: string
-    secrets:
-      PAT_TOKEN:
-        required: true
-
   push:
     branches: [main]
   schedule:
@@ -32,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      BRANCH_NAME: ${{ inputs.branch || 'main' }}
+      BRANCH_NAME: ${{ github.ref_name }}
       REPO_NAME: ${{ github.repository }}
       REPO_OWNER: ${{ github.repository_owner }}
 
@@ -41,38 +21,28 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: true
-          ref: ${{ env.BRANCH_NAME }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
+      - name: Install Google Chrome
+        run: sudo apt-get update && sudo apt-get install -y google-chrome-stable
+
       - name: Install dependencies
         run: npm ci
+        env:
+          PUPPETEER_SKIP_DOWNLOAD: true
 
       - name: Generate screenshot
-        run: |
-          node - <<'EOF'
-          const puppeteer = require('puppeteer');
-          (async () => {
-            const url = process.env.SCREENSHOT_URL || `https://${process.env.REPO_OWNER}.github.io/${process.env.REPO_NAME.split('/')[1]}`;
-            console.log(`📸 Taking screenshot of: ${url}`);
-            const browser = await puppeteer.launch({ headless: true });
-            const page = await browser.newPage();
-            await page.goto(url, { waitUntil: 'networkidle2', timeout: 60000 });
-            await page.screenshot({ path: 'screenshot.png', fullPage: true });
-            await browser.close();
-          })();
-          EOF
-        env:
-          SCREENSHOT_URL: ${{ inputs.screenshot_url }}
+        run: npm run screenshot
 
       - name: Fetch repo traffic and generate visitor badge
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          echo "🔹 Fetching repository views..."
+          echo "🔹 Fetching repository views for $REPO_NAME..."
           VIEWS=$(curl -s -H "Authorization: token $PAT_TOKEN" \
             "https://api.github.com/repos/$REPO_NAME/traffic/views" \
             | jq '.count')
@@ -82,12 +52,11 @@ jobs:
           fi
 
           echo "🟢 Repository Views: $VIEWS"
+
           echo "{\"schemaVersion\":1,\"label\":\"views\",\"message\":\"$VIEWS\",\"color\":\"brightgreen\",\"style\":\"for-the-badge\"}" > visitor-count.json
 
       - name: Update README.md
         run: |
-          TEMPLATE_FILE="${{ inputs.readme_template || 'README_template.md' }}"
-
           echo "![Visitor Count](https://img.shields.io/endpoint?url=https://raw.githubusercontent.com/$REPO_NAME/$BRANCH_NAME/visitor-count.json)" > README_new.md
           echo "" >> README_new.md
           echo "## Screenshot" >> README_new.md
@@ -95,10 +64,10 @@ jobs:
           echo "![Screenshot](screenshot.png)" >> README_new.md
           echo "" >> README_new.md
 
-          if [ -f "$TEMPLATE_FILE" ]; then
-            cat "$TEMPLATE_FILE" >> README_new.md
+          if [ -f README_template.md ]; then
+            cat README_template.md >> README_new.md
           else
-            echo "_No README template found at $TEMPLATE_FILE_" >> README_new.md
+            echo "_No README_template.md found in this repository._" >> README_new.md
           fi
 
           mv README_new.md README.md
@@ -107,7 +76,9 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
           git pull --rebase --autostash origin $BRANCH_NAME
+
           git add README.md screenshot.png visitor-count.json
           git commit -m "Update README, screenshot and visitor badge [ci skip]" || echo "No changes to commit"
           git push
