--- a/.github/workflows/screenshot-and-visitor.yaml
+++ b/.github/workflows/screenshot-and-visitor.yaml
@@ -1,4 +1,4 @@
-name: Screenshot & Unique Visitor/Likes System
+name: Знімок екрану та система лайків/переглядів
 
 on:
   push:
@@ -8,12 +8,12 @@ on:
   workflow_dispatch:
     inputs:
       add_like:
-        description: 'Add your like (only one per user allowed)'
+        description: 'Додати лайк (лише один на користувача)'
         required: false
-        default: true # Галочка встановлена за замовчуванням
+        default: true
         type: boolean
       screenshot_selector:
-        description: 'CSS selector for screenshot'
+        description: 'CSS селектор для знімку екрану'
         required: false
         default: 'body'
         type: string
@@ -30,24 +30,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Завантаження репозиторію
         uses: actions/checkout@v4
         with:
           persist-credentials: true
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Налаштування Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install system dependencies
+      - name: Встановлення залежностей
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
-      - name: Install Node.js dependencies
+      - name: Встановлення npm залежностей
         run: |
           if [ -f "package.json" ]; then
             npm ci
@@ -58,7 +58,7 @@ jobs:
         env:
           PUPPETEER_SKIP_DOWNLOAD: true
 
-      - name: Create screenshot script
+      - name: Створення скрипту для знімку екрану
         run: |
           mkdir -p scripts
           cat > scripts/screenshot.js << 'EOF'
@@ -82,7 +82,7 @@ jobs:
               targetUrl = `file://${indexPath}`;
             } else {
               targetUrl = githubPages;
-              console.log(`📡 Using GitHub Pages URL: ${targetUrl}`);
+              console.log(`📡 Використовую URL GitHub Pages: ${targetUrl}`);
             }
             
             try {
@@ -102,15 +102,15 @@ jobs:
                 type: 'png'
               });
               
-              console.log('✅ Screenshot created successfully');
+              console.log('✅ Знімок екрану успішно створено');
             } catch (error) {
-              console.error('❌ Screenshot failed:', error.message);
+              console.error('❌ Помилка при створенні знімку екрану:', error.message);
               
               const fallbackSvg = `
                 <svg width="800" height="600" xmlns="http://www.w3.org/2000/svg">
                   <rect width="800" height="600" fill="#f0f0f0"/>
                   <text x="400" y="300" text-anchor="middle" fill="#333" font-size="24" font-family="Arial">
-                    Screenshot not available
+                    Знімок недоступний
                   </text>
                 </svg>
               `;
@@ -124,31 +124,31 @@ jobs:
           takeScreenshot().catch(console.error);
           EOF
 
-      - name: Generate screenshot
+      - name: Генерація знімку екрану
         run: node scripts/screenshot.js
         env:
           GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
           GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
           SCREENSHOT_SELECTOR: ${{ github.event.inputs.screenshot_selector }}
 
-      - name: Manage likes system
+      - name: Управління системою лайків
         run: |
-          # Initialize likes data
+          # Ініціалізація даних лайків
           if [ ! -f "likes-data.json" ]; then
             echo '{"total_likes":0,"unique_users":[],"created_at":"","last_updated":""}' > likes-data.json
           fi
 
-          # Get current data
+          # Отримання поточних даних
           CURRENT_LIKES=$(jq -r '.total_likes' likes-data.json)
           CURRENT_USERS=$(jq -r '.unique_users[]' likes-data.json)
 
-          # Handle like request
+          # Обробка запиту на лайк
           if [ "${{ github.event.inputs.add_like }}" = "true" ]; then
             USER="${{ github.actor }}"
             
             if echo "$CURRENT_USERS" | grep -q "$USER"; then
               echo "LIKE_STATUS=already_liked" >> $GITHUB_ENV
-              echo "⚠️ $USER already liked this project!"
+              echo "⚠️ $USER вже ставив лайк цьому проєкту!"
             else
               NEW_LIKES=$((CURRENT_LIKES + 1))
               jq --arg user "$USER" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
@@ -156,22 +156,22 @@ jobs:
                 likes-data.json > tmp.json && mv tmp.json likes-data.json
               
               echo "LIKE_STATUS=added" >> $GITHUB_ENV
-              echo "💖 New like from $USER! Total: $NEW_LIKES"
+              echo "💖 Новий лайк від $USER! Всього: $NEW_LIKES"
             fi
           fi
 
-          # Update likes badge
+          # Оновлення бейджу лайків
           CURRENT_LIKES=$(jq -r '.total_likes' likes-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"❤️ likes\",\"message\":\"$CURRENT_LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
+          echo "{\"schemaVersion\":1,\"label\":\"❤️ лайки\",\"message\":\"$CURRENT_LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
 
-      - name: Update visitor count
+      - name: Оновлення лічильника відвідувань
         run: |
-          # Fallback visitor count system
+          # Резервна система підрахунку відвідувань
           if [ ! -f "visitor-data.json" ]; then
             echo '{"unique_visitors":1,"last_updated":"","fallback_mode":true}' > visitor-data.json
           fi
 
-          # Increment if manual run by user
+          # Збільшення при ручному запуску користувачем
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.actor }}" != "github-actions[bot]" ]; then
             CURRENT=$(jq -r '.unique_visitors' visitor-data.json)
             NEW=$((CURRENT + 1))
@@ -181,44 +181,45 @@ jobs:
           fi
 
           CURRENT_VISITORS=$(jq -r '.unique_visitors' visitor-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"👀 views\",\"message\":\"$CURRENT_VISITORS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
+          echo "{\"schemaVersion\":1,\"label\":\"👀 перегляди\",\"message\":\"$CURRENT_VISITORS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
 
-      - name: Update README
+      - name: Оновлення README
         run: |
           REPO_URL="https://raw.githubusercontent.com/${{ github.repository }}/main"
           LIKES=$(jq -r '.total_likes' likes-data.json)
           VIEWS=$(jq -r '.unique_visitors' visitor-data.json)
 
-          # Create interactive like button
+          # Створення інтерактивної кнопки лайку
           cat > like-button.md << 'EOF'
-          [![❤️ Like this project?](https://img.shields.io/badge/dynamic/json?url=${REPO_URL}/likes-count.json&query=%24.message&label=%F0%9F%92%96%20Likes&color=red&style=for-the-badge)](https://github.com/${{ github.repository }}/actions/workflows/screenshot-and-visitor.yml?query=workflow%3A%22Screenshot+%26+Unique+Visitor%2FLikes+System%22)
+          [![❤️ Подобається цей проєкт?](https://img.shields.io/badge/dynamic/json?url=${REPO_URL}/likes-count.json&query=%24.message&label=%F0%9F%92%96%20Лайки&color=red&style=for-the-badge)](https://github.com/${{ github.repository }}/actions/workflows/screenshot-and-visitor.yml?query=workflow%3A%22Screenshot+%26+Unique+Visitor%2FLikes+System%22)
           EOF
 
-          # Generate new README
+          # Генерація нового README
           {
             echo "# ${{ github.event.repository.name }}"
             echo ""
-            echo "![Views](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)"
+            echo "[![Перегляди](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)]"
             cat like-button.md
+            echo ""
+            echo ""
+            echo "## 💖 Як поставити лайк:"
+            echo "1. Натисніть червоне серце вище - ваш лайк буде додано автоматично!"
+            echo ""
+            echo "## 📊 Статистика"
+            echo "- Всього лайків: ![Лайки](https://img.shields.io/endpoint?url=${REPO_URL}/likes-count.json)"
+            echo "- Унікальних переглядів: ![Перегляди](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)"
             echo ""
             
             if [ -f "README_template.md" ]; then
               cat README_template.md
-            else
-              echo "## 💖 How to like this project:"
-              echo "1. Click the red heart button above - your like will be added automatically!"
-              echo ""
-              echo "## 📊 Stats"
-              echo "- Total likes: ${LIKES}"
-              echo "- Unique visitors: ${VIEWS}"
             fi
           } > README.md
 
-      - name: Commit changes
+      - name: Коміт змін
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
           git add .
-          git commit -m "📊 Update stats: ${VIEWS} views, ${LIKES} likes [skip ci]" || exit 0
+          git commit -m "📊 Оновлення статистики: ${VIEWS} переглядів, ${LIKES} лайків [skip ci]" || exit 0
           git push
