--- a/.github/workflows/screenshot-and-visitor.yaml
+++ b/.github/workflows/screenshot-and-visitor.yaml
@@ -19,60 +19,104 @@ on:
         type: string
 
 env:
-  SCREENSHOT_WIDTH: ${{ vars.SCREENSHOT_WIDTH || '1920' }}
-  SCREENSHOT_HEIGHT: ${{ vars.SCREENSHOT_HEIGHT || '1080' }}
-  BADGE_STYLE: ${{ vars.BADGE_STYLE || 'for-the-badge' }}
-  BADGE_COLOR: ${{ vars.BADGE_COLOR || 'brightgreen' }}
-  LIKES_COLOR: ${{ vars.LIKES_COLOR || 'red' }}
+  SCREENSHOT_WIDTH: 1920
+  SCREENSHOT_HEIGHT: 1080
+  BADGE_STYLE: for-the-badge
+  BADGE_COLOR: brightgreen
+  LIKES_COLOR: red
 
 jobs:
   update-readme-and-visitor:
     runs-on: ubuntu-latest
 
     steps:
-      # ... (інші кроки залишаються без змін)
+      - name: Завантаження репозиторію
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
-      - name: Оновлення лічильника відвідувань
+      - name: Налаштування Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Встановлення залежностей
         run: |
-          # Резервна система підрахунку відвідувань
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable jq
+
+      - name: Ініціалізація даних
+        run: |
+          if [ ! -f "likes-data.json" ]; then
+            echo '{"total_likes":0,"unique_users":[],"created_at":"","last_updated":""}' > likes-data.json
+          fi
           if [ ! -f "visitor-data.json" ]; then
             echo '{"unique_visitors":1,"last_updated":"","fallback_mode":true}' > visitor-data.json
           fi
 
-          # Збільшення при ручному запуску користувачем
+      - name: Обробка лайків
+        run: |
+          if [ "${{ github.event.inputs.add_like }}" = "true" ]; then
+            USER="${{ github.actor }}"
+            CURRENT_USERS=$(jq -r '.unique_users[]' likes-data.json 2>/dev/null || echo "")
+            
+            if echo "$CURRENT_USERS" | grep -q "$USER"; then
+              echo "➡️ $USER вже ставив лайк раніше"
+            else
+              jq --arg user "$USER" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
+                '.total_likes += 1 | .unique_users += [$user] | .last_updated = $date | if .created_at == "" then .created_at = $date else . end' \
+                likes-data.json > tmp.json && mv tmp.json likes-data.json
+              echo "❤️ Новий лайк від $USER"
+            fi
+          fi
+
+          LIKES=$(jq -r '.total_likes // 0' likes-data.json)
+          echo "{\"schemaVersion\":1,\"label\":\"❤️ лайки\",\"message\":\"$LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
+
+      - name: Оновлення переглядів
+        run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.actor }}" != "github-actions[bot]" ]; then
-            CURRENT=$(jq -r '.unique_visitors' visitor-data.json)
+            CURRENT=$(jq -r '.unique_visitors // 1' visitor-data.json)
             NEW=$((CURRENT + 1))
             jq --arg count "$NEW" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
               '.unique_visitors = ($count | tonumber) | .last_updated = $date' \
               visitor-data.json > tmp.json && mv tmp.json visitor-data.json
           fi
 
-          CURRENT_VISITORS=$(jq -r '.unique_visitors' visitor-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"👀 перегляди\",\"message\":\"$CURRENT_VISITORS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
+          VIEWS=$(jq -r '.unique_visitors // 1' visitor-data.json)
+          echo "{\"schemaVersion\":1,\"label\":\"👀 перегляди\",\"message\":\"$VIEWS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
 
       - name: Оновлення README
         run: |
           REPO_URL="https://raw.githubusercontent.com/${{ github.repository }}/main"
-          LIKES=$(jq -r '.total_likes' likes-data.json)
-          VIEWS=$(jq -r '.unique_visitors' visitor-data.json)
+          LIKES=$(jq -r '.total_likes // 0' likes-data.json)
+          VIEWS=$(jq -r '.unique_visitors // 1' visitor-data.json)
 
-          # Генерація нового README
           {
             echo "# ${{ github.event.repository.name }}"
             echo ""
-            echo "[![Перегляди](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)]"
-            echo "[![❤️ Лайки](https://img.shields.io/endpoint?url=${REPO_URL}/likes-count.json)]"
+            echo "[![Перегляди](${REPO_URL}/visitor-count.json)]"
+            echo "[![❤️ Лайки](${REPO_URL}/likes-count.json)]"
             echo ""
-            echo "## 💖 Як поставити лайк:"
-            echo "1. Натисніть червоне серце вище - ваш лайк буде додано автоматично!"
+            echo "## ❤️ Як поставити лайк:"
+            echo "1. Натисніть червоне серце вище або зірочку в репозиторії "
             echo ""
             echo "## 📊 Статистика"
-            echo "- Всього лайків: [![Лайки](https://img.shields.io/endpoint?url=${REPO_URL}/likes-count.json)]"
-            echo "- Унікальних переглядів: [![Перегляди](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)]"
+            echo "- Всього лайків: [![Лайки](${REPO_URL}/likes-count.json)]"
+            echo "- Унікальних переглядів: [![Перегляди](${REPO_URL}/visitor-count.json)]"
             echo ""
             
             if [ -f "README_template.md" ]; then
               cat README_template.md
             fi
           } > README.md
+
+      - name: Відправка змін
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "📊 Оновлення статистики: $VIEWS переглядів, $LIKES лайків" || exit 0
+          git push
