--- a/.github/workflows/screenshot-and-visitor.yaml
+++ b/.github/workflows/screenshot-and-visitor.yaml
@@ -1,4 +1,4 @@
-name: Знімок екрану та система лайків/переглядів
+name: Screenshot and Likes/Views System
 
 on:
   push:
@@ -8,12 +8,12 @@ on:
   workflow_dispatch:
     inputs:
       add_like:
-        description: 'Додати лайк (лише один на користувача)'
+        description: 'Add like (one per user)'
         required: false
         default: true
         type: boolean
       screenshot_selector:
-        description: 'CSS селектор для знімку екрану'
+        description: 'CSS selector for screenshot'
         required: false
         default: 'body'
         type: string
@@ -26,28 +26,28 @@ env:
   LIKES_COLOR: red
 
 jobs:
-  update-readme-and-visitor:
+  update-stats:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Завантаження репозиторію
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           persist-credentials: true
           fetch-depth: 0
 
-      - name: Налаштування Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
 
-      - name: Встановлення залежностей
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable jq
 
-      - name: Ініціалізація даних
+      - name: Initialize data
         run: |
           if [ ! -f "likes-data.json" ]; then
             echo '{"total_likes":0,"unique_users":[],"created_at":"","last_updated":""}' > likes-data.json
@@ -56,26 +56,26 @@ jobs:
             echo '{"unique_visitors":1,"last_updated":"","fallback_mode":true}' > visitor-data.json
           fi
 
-      - name: Обробка лайків
+      - name: Process likes
         run: |
           if [ "${{ github.event.inputs.add_like }}" = "true" ]; then
             USER="${{ github.actor }}"
             CURRENT_USERS=$(jq -r '.unique_users[]' likes-data.json 2>/dev/null || echo "")
             
             if echo "$CURRENT_USERS" | grep -q "$USER"; then
-              echo "➡️ $USER вже ставив лайк раніше"
+              echo "➡️ $USER already liked this"
             else
               jq --arg user "$USER" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
                 '.total_likes += 1 | .unique_users += [$user] | .last_updated = $date | if .created_at == "" then .created_at = $date else . end' \
                 likes-data.json > tmp.json && mv tmp.json likes-data.json
-              echo "❤️ Новий лайк від $USER"
+              echo "❤️ New like from $USER"
             fi
           fi
 
           LIKES=$(jq -r '.total_likes // 0' likes-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"❤️ лайки\",\"message\":\"$LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
+          echo "{\"schemaVersion\":1,\"label\":\"❤️ likes\",\"message\":\"$LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
 
-      - name: Оновлення переглядів
+      - name: Update views
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.actor }}" != "github-actions[bot]" ]; then
             CURRENT=$(jq -r '.unique_visitors // 1' visitor-data.json)
@@ -86,9 +86,9 @@ jobs:
           fi
 
           VIEWS=$(jq -r '.unique_visitors // 1' visitor-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"👀 перегляди\",\"message\":\"$VIEWS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
+          echo "{\"schemaVersion\":1,\"label\":\"👀 views\",\"message\":\"$VIEWS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
 
-      - name: Оновлення README
+      - name: Update README
         run: |
           REPO_URL="https://raw.githubusercontent.com/${{ github.repository }}/main"
           LIKES=$(jq -r '.total_likes // 0' likes-data.json)
@@ -101,7 +101,7 @@ jobs:
             echo "[![❤️ Лайки](${REPO_URL}/likes-count.json)]"
             echo ""
             echo "## ❤️ Як поставити лайк:"
-            echo "1. Натисніть червоне серце вище або зірочку в репозиторії "
+            echo "1. Натисніть червоне серце вище або зірочку в репозиторії"
             echo ""
             echo "## 📊 Статистика"
             echo "- Всього лайків: [![Лайки](${REPO_URL}/likes-count.json)]"
@@ -113,10 +113,10 @@ jobs:
             fi
           } > README.md
 
-      - name: Відправка змін
+      - name: Commit changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add .
-          git commit -m "📊 Оновлення статистики: $VIEWS переглядів, $LIKES лайків" || exit 0
+          git commit -m "Update stats: $VIEWS views, $LIKES likes" || exit 0
           git push
