--- a/.github/workflows/screenshot-and-visitor.yaml
+++ b/.github/workflows/screenshot-and-visitor.yaml
@@ -1,19 +1,19 @@
-name: Screenshot and Likes/Views System
+name: System of likes and views
 
 on:
   push:
     branches: [main, master]
   schedule:
-    - cron: '0 */2 * * *'
+    - cron: '0 */2 * * *' # Оновлення кожні 2 години
   workflow_dispatch:
     inputs:
       add_like:
-        description: 'Add like (one per user)'
+        description: 'Додати лайк (лише один на користувача)'
         required: false
         default: true
         type: boolean
       screenshot_selector:
-        description: 'CSS selector for screenshot'
+        description: 'CSS селектор для знімку екрану'
         required: false
         default: 'body'
         type: string
@@ -27,27 +27,28 @@ env:
 
 jobs:
   update-stats:
+    name: Оновлення статистики
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Завантаження репозиторію
         uses: actions/checkout@v4
         with:
           persist-credentials: true
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Налаштування Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies
+      - name: Встановлення залежностей
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable jq
 
-      - name: Initialize data
+      - name: Ініціалізація даних
         run: |
           if [ ! -f "likes-data.json" ]; then
             echo '{"total_likes":0,"unique_users":[],"created_at":"","last_updated":""}' > likes-data.json
@@ -56,26 +57,26 @@ jobs:
             echo '{"unique_visitors":1,"last_updated":"","fallback_mode":true}' > visitor-data.json
           fi
 
-      - name: Process likes
+      - name: Обробка лайків
         run: |
           if [ "${{ github.event.inputs.add_like }}" = "true" ]; then
             USER="${{ github.actor }}"
             CURRENT_USERS=$(jq -r '.unique_users[]' likes-data.json 2>/dev/null || echo "")
             
             if echo "$CURRENT_USERS" | grep -q "$USER"; then
-              echo "➡️ $USER already liked this"
+              echo "➡️ $USER вже ставив лайк раніше"
             else
               jq --arg user "$USER" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
                 '.total_likes += 1 | .unique_users += [$user] | .last_updated = $date | if .created_at == "" then .created_at = $date else . end' \
                 likes-data.json > tmp.json && mv tmp.json likes-data.json
-              echo "❤️ New like from $USER"
+              echo "❤️ Новий лайк від $USER"
             fi
           fi
 
           LIKES=$(jq -r '.total_likes // 0' likes-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"❤️ likes\",\"message\":\"$LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
+          echo "{\"schemaVersion\":1,\"label\":\"❤️ лайки\",\"message\":\"$LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
 
-      - name: Update views
+      - name: Оновлення переглядів
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.actor }}" != "github-actions[bot]" ]; then
             CURRENT=$(jq -r '.unique_visitors // 1' visitor-data.json)
@@ -86,26 +87,30 @@ jobs:
           fi
 
           VIEWS=$(jq -r '.unique_visitors // 1' visitor-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"👀 views\",\"message\":\"$VIEWS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
+          echo "{\"schemaVersion\":1,\"label\":\"👀 перегляди\",\"message\":\"$VIEWS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
 
-      - name: Update README
+      - name: Оновлення README
         run: |
           REPO_URL="https://raw.githubusercontent.com/${{ github.repository }}/main"
+          WORKFLOW_URL="https://github.com/${{ github.repository }}/actions/workflows/${{ github.workflow }}.yml"
           LIKES=$(jq -r '.total_likes // 0' likes-data.json)
           VIEWS=$(jq -r '.unique_visitors // 1' visitor-data.json)
 
           {
             echo "# ${{ github.event.repository.name }}"
             echo ""
-            echo "[![Перегляди](${REPO_URL}/visitor-count.json)]"
-            echo "[![❤️ Лайки](${REPO_URL}/likes-count.json)]"
+            echo "[![Перегляди](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)](${WORKFLOW_URL})"
+            echo "[![❤️ Лайки](https://img.shields.io/endpoint?url=${REPO_URL}/likes-count.json)](${WORKFLOW_URL})"
             echo ""
             echo "## ❤️ Як поставити лайк:"
-            echo "1. Натисніть червоне серце вище або зірочку в репозиторії"
-            echo ""
+            echo "Натисніть на червоне серце вище ❤️ або на зірочку в репозиторії"
             echo "## 📊 Статистика"
-            echo "- Всього лайків: [![Лайки](${REPO_URL}/likes-count.json)]"
-            echo "- Унікальних переглядів: [![Перегляди](${REPO_URL}/visitor-count.json)]"
+            echo "- Всього лайків: [$LIKES](${WORKFLOW_URL})"
+            echo "- Унікальних переглядів: [$VIEWS](${WORKFLOW_URL})"
+            echo ""
+            echo "### Бейджі в реальному часі:"
+            echo "- [![Лайки](https://img.shields.io/endpoint?url=${REPO_URL}/likes-count.json)](${WORKFLOW_URL})"
+            echo "- [![Перегляди](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)](${WORKFLOW_URL})"
             echo ""
             
             if [ -f "README_template.md" ]; then
@@ -113,10 +118,10 @@ jobs:
             fi
           } > README.md
 
-      - name: Commit changes
+      - name: Запис змін
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add .
-          git commit -m "Update stats: $VIEWS views, $LIKES likes" || exit 0
+          git commit -m "🔄 Statistics Update: $ Views Views, $ Likes likes" || exit 0
           git push
